# BidMaster

./: CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 001_add_f10_notifications.py  002_add_f03_proposals.py
backend/src/: __init__.py  config.py  main.py  scheduler.py
backend/src/api/: deps.py
backend/src/api/v1/: auth.py  bids.py  companies.py  dashboard.py  notifications.py  proposals.py  router.py
backend/src/core/: database.py  exceptions.py  security.py
backend/src/models/: __init__.py  bid.py  bid_attachment.py  bid_win_history.py  company.py  notification.py  notification_setting.py  oauth_state.py  password_reset_token.py  proposal.py  proposal_section.py  proposal_version.py  refresh_token.py  user.py  user_bid_match.py  user_bid_tracking.py
backend/src/schemas/: auth.py  bid.py  bid_match.py  dashboard.py  notification.py  proposal.py  scoring.py  strategy.py  tracking.py
backend/src/services/: auth_service.py  bid_collector_service.py  bid_match_service.py  bid_parser_service.py  bid_tracking_service.py  bidding_strategy_service.py  company_service.py  dashboard_service.py  email_sender.py  kakao_sender.py  notification_service.py  oauth_service.py  proposal_generator_service.py  proposal_service.py  scoring_service.py
backend/src/templates/email/: base.html  bid_matched.html  bid_result.html  deadline.html  proposal_ready.html
backend/src/templates/prompts/: budget.jinja2  methodology.jinja2  organization.jinja2  overview.jinja2  schedule.jinja2  technical.jinja2
backend/src/utils/: validators.py
backend/tests/: conftest.py  test_f06_dashboard.py
backend/tests/api/: conftest.py  test_auth_api.py
backend/tests/f03/: test_proposal_service.py
backend/tests/f05/: test_auto_save.py  test_proposal_editor_service.py  test_validate_proposal.py
backend/tests/f10/: test_notification_service.py
backend/tests/integration/: test_bid_api.py  test_company_api.py  test_scoring_api.py  test_strategy_api.py
backend/tests/unit/: test_bid_collector_service.py  test_bid_match_service.py  test_bid_parser_service.py  test_bidding_strategy_service.py  test_certification_service.py  test_company_service.py  test_jwt_service.py  test_member_service.py  test_password_service.py  test_performance_service.py  test_scoring_service.py  test_validators.py
docs/: roadmap.md
docs/api/: F-01-bid-collection.md  F-02-scoring.md  (+6 more)
frontend/: .dockerignore  .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json
(+174 files in other folders)
