[project]
name = "bidmaster-backend"
version = "0.1.0"
description = "AI 기반 공공 입찰 제안서 자동화 SaaS - Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "zhipuai>=2.0.0",
    "redis[asyncio]==5.2.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "anthropic==0.40.0",
    "python-multipart==0.0.17",
    "email-validator==2.2.0",
    "python-dotenv==1.0.1",
    "httpx>=0.25.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.3.0",
    "pdfplumber>=0.10.0",
    "aiosmtplib>=2.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[build-system]
requires = ["setuptools>=75.8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
